# gstreamer-example

./: CMakeLists.txt  Makefile  README.md  gstreamer-example_1.0.bb  gstreamer_pipeline_auto.c  gstreamer_pipeline_manually.c  videotest.c
